--- a/less/navigation.less
+++ b/less/navigation.less
@@ -24,6 +24,7 @@ header {
 }
 
 nav {
+  z-index: 100;
   max-width: 100%;
   display: flex;
   position: sticky;
